--- a/SistemaFotos.Web/Views/Home/Index.cshtml
+++ b/SistemaFotos.Web/Views/Home/Index.cshtml
@@ -4,5 +4,26 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <img class="rouded" src="~/img/oo-csharp.png">
+                <p>Parágrafo sobre a imagem</p>
+                <br />
+                <br />
+            </div>
+            <div class="col-sm">
+                <img class="rouded" src="~/img/oo-csharp.png">
+                <p>Parágrafo sobre a imagem</p>
+                <br />
+                <br />
+            </div>
+            <div class="col-sm">
+                <img class="rouded" src="~/img/oo-csharp.png">
+                <p>Parágrafo sobre a imagem</p>
+                <br />
+                <br />
+            </div>
+        </div>
+    </div>
 </div>
