Salvando arquivo, mas não os dados

--- a/SistemaFotos.Web/Views/Home/Novo.cshtml
+++ b/SistemaFotos.Web/Views/Home/Novo.cshtml
@@ -6,13 +6,13 @@
             <label asp-for="Titulo">Título</label>
             <input asp-for="Titulo" type="text" id="titulo" class="form-control" />
         </div>
-        <div class="form-group">
+        @* <div class="form-group">
             <label asp-for="Descricao">Descrição</label>
             <input asp-for="Descricao" type="text" id="descricao" class="form-control" />
-        </div>
+        </div> *@
         <div class="form-group">
-            <label for="uploadimagem">Carregar Imagem</label>
-            <input type="file" id="uploadImagem" class="form-control-file" />
+            <label for="dadosimagem">Carregar Imagem</label>
+            <input type="file" id="dadosImagem" class="form-control-file" />
         </div>
         <button type="submit" class="btn btn-primary">Enviar</button>
     </form>
