Adicionando jpg e jpeg, persistindo imagens

--- a/SistemaFotos.Web/Views/Home/Novo.cshtml
+++ b/SistemaFotos.Web/Views/Home/Novo.cshtml
@@ -13,7 +13,7 @@
         <div class="form-group">
             <label asp-for="Arquivo">Carregar Imagem</label>
             <input asp-for="Arquivo" type="file" class="form-control-file"
-                   accept="image/png, image/jpg"/>
+                   accept="image/png, image/jpg, image/jpeg"/>
         </div>
         <button type="submit" class="btn btn-primary">Enviar</button>
     </form>
