--- a/SistemaFotos.Web/Views/Home/Index.cshtml
+++ b/SistemaFotos.Web/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
             @foreach (var img in Model)
             {
                 <div class="col-sm">
-                    <img class="rouded" src="@(img.Caminho)">
+                    <img class="rounded" src="@(img.Caminho)">
                     <p>@img.Titulo</p>
                     <br />
                     <br />
