--- a/SistemaFotos.Web/Views/Albuns/Novo.cshtml
+++ b/SistemaFotos.Web/Views/Albuns/Novo.cshtml
@@ -1,7 +1,7 @@
 @model SistemaFotos.Web.Models.ImagemUpload
 
 <div class="container">
-    <form asp-controller="Home" asp-action="SubirImagem" method="post" enctype="multipart/form-data">
+    <form asp-controller="Albuns" asp-action="SubirImagem" method="post" enctype="multipart/form-data">
         <div class="form-group">
             <label asp-for="Titulo">Título</label>
             <input asp-for="Titulo" type="text" id="titulo" class="form-control" />
