Adicionando método Deletar

--- a/SistemaFotos.Web/Views/Albuns/TodasImagens.cshtml
+++ b/SistemaFotos.Web/Views/Albuns/TodasImagens.cshtml
@@ -21,6 +21,10 @@
                     <a asp-action="AlterarDetalhesImagem" asp-controller="Albuns" asp-route-id="@img.Id" class="text-dark">
                         Alterar
                     </a>
+                     | 
+                    <a asp-action="DeletarImagem" asp-controller="Albuns" asp-route-id="@img.Id" class="text-danger">
+                        Deletar
+                    </a>
                     <br />
                     <br />
                 </div>
